# EMIS-V2

./: .env.example  .gitattributes  .gitignore  .mcp.json  PUSH_INSTRUCTIONS.md  README.md  package.json  push-to-github.ps1  tsconfig.base.json
apps/worker/: .env.example  pyproject.toml
apps/worker/emis_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/worker/src/: config.py  main.py
apps/worker/src/alerts/: fanout.py  policy_engine.py
apps/worker/src/db/: client.py  repositories.py  repositories_47b.py  repositories_47c.py  repositories_47d.py  repositories_48a.py  repositories_48b.py  repositories_48c.py  repositories_48d.py
apps/worker/src/features/: feature_service.py
apps/worker/src/ingestion/: alpaca_equity_client.py  base.py  binance_client.py  coinglass_client.py  coinmarketcap_client.py  currency_api_client.py  fred_client.py
apps/worker/src/jobs/: consumer.py  reaper.py  retry_policy.py  scheduler.py
apps/worker/src/scripts/: seed_demo_data.py  sync_crypto_market_data.py  validate_control_plane.py  validate_phase24.py  validate_phase25a.py  validate_phase25b.py  validate_phase25c.py  validate_phase25d.py  validate_phase26a.py  validate_phase26b.py  validate_phase26c.py  validate_phase26d.py  validate_phase27_market_sync.py  validate_phase27a.py  validate_phase27b.py  validate_phase27c.py  validate_phase28.py  validate_phase29.py  validate_phase30a.py  validate_phase30b.py  validate_phase30c.py  validate_phase30d.py  validate_phase31a.py  validate_phase31b.py  validate_phase31c.py  validate_phase31d.py  validate_phase32a.py  (+55 more)
(+441 files in other folders)
