[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emis-worker"
version = "0.1.0"
description = "EMIS worker for ingestion and signal recompute"
requires-python = ">=3.11"
dependencies = [
  "psycopg[binary]>=3.2.6",
  "pydantic>=2.10.6",
  "python-dotenv>=1.0.1"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
